fix: adjust label color contrast

--- a/src/styles/elements/dot.scss
+++ b/src/styles/elements/dot.scss
@@ -6,7 +6,7 @@ $dot-size: 6px;
   padding-left: 18px;
   font-size: $font-m;
   font-weight: normal;
-  color: $color-grey-700;
+  color: $color-grey-600;
 
   &::after {
     content: '';
